# trace4pm_api

./: .RData  .Rhistory  .gitignore  Dockerfile  README.md  animation_csv.html  animation_xes.html  docker-compose.yml  dockerfile  main.py  process_animation.html  pyproject.toml
api/: client_utils.py  collection_utils.py  security.py  stats_utils.py  tags_utils.py  users_utils.py
api/database/: client.py  config.py
api/models/: client.py  collection.py  request.py  session.py  token.py  users.py
api/routers/: client.py  collection.py  files.py  request.py  stats.py  tags.py  token.py  users.py
database/: client.py  config.py
json/: clients.json  model_log.json  model_user.json
services/discover/: animation_output.html  animation_xes.html  dev.py  pyproject.toml
services/discover/discover/: file.R  main.py
services/discover/discover/models/: events.py
src/: base.py  clustering_utils.py  collection_utils.py  discover_utils.py  main.py  security.py  stats_utils.py  tags_utils.py  utils.py
src/database/: config.py
src/logs/: Digital-Library-logs.csv  result_res10k.csv
src/models/: cluster_params.py  collection.py  discover.py  params.py  response_parameters.py  token.py  users.py
src/outputs/: pnml_file.pnml  quality.json
src/outputs/logs/: cluster_log_0.csv  cluster_log_10.csv  cluster_log_2.csv  cluster_log_3.csv  cluster_log_4.csv  cluster_log_5.csv  cluster_log_6.csv  cluster_log_7.csv  cluster_log_8.csv  cluster_log_9.csv
src/routers/: clustering.py  collection.py  discover.py  file.R  files.py  request.py  session.py  stats.py  token.py  users.py
tag/: tag_config.json
test_api/: main_test.py  test_stats.py
