[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [
    "Axel Gohier <axel.gohier@etudiant.univ-lr.fr>",
    "Nannito Junior Alcime <nannito.alcime@etudiant.univ-lr.fr>"
    ]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.95.1"}
pymongo = "^4.3.3"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
motor = "^3.1.2"
aiofiles = "^23.1.0"
httpx = "^0.24.1"
trio = "^0.22.0"
anyio = "^3.7.0"
pandas = "^2.2.2"
scikit-learn = "^1.4"
numpy = "^1.26.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.3.1"
parser = {git = "https://gitlab.univ-lr.fr/trace_clustering/services/parser.git"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tagging = {git = "https://gitlab.univ-lr.fr/trace_clustering/services/tagging.git"}
pm4py = "2.7.8.4"
discover = {git = "https://gitlab.univ-lr.fr/trace_clustering/services/discovery.git"}
clustering = {git = "https://gitlab.univ-lr.fr/trace_clustering/services/clustering.git"}
Levenshtein = "^0.25.1"
pyemd = "^1.0.0"
mlxtend = "^0.23.1"
prefixspan = "^0.5.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::trio.TrioDeprecationWarning"]


[tool.poetry.scripts]
server = "uvicorn main:app --reload"
