[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [
    "Axel Gohier <axel.gohier@etudiant.univ-lr.fr>",
    "Nannito Junior Alcime <nannito.alcime@etudiant.univ-lr.fr>",
    "Ania DAHACHE <ania.dahache@univ-lr.fr>",
    "Marwa Trabelsi <marwa.trabelsi@univ-lr.fr>",
    "Cyrille Suire <cyrille.suire@univ-lr.fr>",
    "Ronan Champagnat <ronan.champagnat@univ-lr.fr>"
    ]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.95.1"}
pymongo = "^4.3.3"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
motor = "^3.1.2"
aiofiles = "^23.1.0"
httpx = "^0.24.1"
trio = "^0.22.0"
anyio = "^3.7.0"
pandas = "^2.2.2"
scikit-learn = "^1.4"
numpy = "^1.26.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.3.1"
parser = {git = "https://github.com/TRACE4PM/parser"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tagging = {git = "https://github.com/TRACE4PM/tagger"}
pm4py = "2.7.11.10"
discover = {git = "https://github.com/TRACE4PM/discovery"}
clustering = {git = "https://github.com/TRACE4PM/trace_clustering"}
Levenshtein = "^0.25.1"
pyemd = "^1.0.0"
mlxtend = "^0.23.1"
prefixspan = "^0.5.2"
discovery = "^0.0.4"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::trio.TrioDeprecationWarning"]


[tool.poetry.scripts]
server = "uvicorn main:app --reload"
