[tool.poetry]
name = "discover"
version = "0.1.0"
description = ""
authors = ["Ania Dahache <you@example.com>"]
packages = [ { include = "discover" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = "^0.27.1"
pydantic = "^1.10.7"
pm4py = "^2.7.8.4"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
